<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center_horizontal|center_vertical"
    android:background="@color/colorParentBackground"
    tools:context="lyadrienne.generalassemb.git.myapplication.DetailActivity">

    <ImageView
        android:id="@+id/detail_imageview"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="25dp"
        android:background="@color/colorAccent"/>

    <TextView
        android:id="@+id/detail_titleview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginBottom="8dp"
        android:background="@color/colorViewBackground"
        />

    <TextView
        android:id="@+id/detail_descripview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8dp"
        android:text="Test"
        android:scrollHorizontally="false"
        android:background="@color/colorViewBackground"
       />

    <TextView
        android:id="@+id/detail_amountview"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:padding="7dp"
        android:text="##.##"
        android:textSize="15dp"
        android:paddingTop="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8dp"
        android:paddingBottom="5dp"
        android:background="@color/colorViewBackground"
        />

    <Button
        android:id="@+id/detail_addtocart"
        android:textSize="14dp"
        android:text="@string/addtocart"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        />
    <TextView
        android:id="@+id/detail_addwishlist"
        android:text="@string/addtowishlist"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
       />

    <ImageView
        android:id="@+id/detail_shoppingcart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:src="@drawable/ic_shopping_bag"
        />

</LinearLayout>