<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorParentBackground"
    tools:context="lyadrienne.generalassemb.git.myapplication.ShoppingCartActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/checkout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>


 <LinearLayout
     android:id="@+id/topPanel"
     android:layout_below="@+id/checkout_toolbar"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
    <TextView
        android:id="@+id/sum_textview"
        android:layout_width="0dp"
        android:layout_weight=".5"
        android:text="Text"
        android:layout_gravity="center"
        android:padding="14dp"
        android:textAlignment="center"
        android:background="@color/colorViewBackground"
        android:textSize="18dp"

        android:layout_height="48dp"/>

    <Button
        android:id="@+id/checkout_button"
        android:layout_weight=".5"
        android:text="@string/checkout"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginLeft="12dp"
        android:background="@color/colorViewBackground"
        />

 </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/shoppingcart_recycleview"
        android:layout_below="@+id/topPanel"
        android:padding="12dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>