<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/searchbar"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item
        android:id="@+id/action_shoppingcart"
        android:icon="@drawable/ic_shopping_bag"
        android:title="@string/shopping_cart"
        app:showAsAction="always"/>


    <item
        android:id="@+id/action_wishlist"
        android:title="@string/action_wishlist"
        app:showAsAction="never"/>
</menu>